# versecbot-interface

./: README.md  Taskfile.yml  pyproject.toml
src/versecbot_interface/: __init__.py  jobs.py  logging.py  plugin.py  reaction.py  settings.py  version.py
